@@ -48,6 +48,7 @@ DXGI
 	* Added IsFullScreen property to SwapChain as a convenient alternative to GetFullScreenState.
 	* Fixed a null reference check in Output.GetClosestMatchingMode.
 	* Added Surface1 support.
+	* Fixed DXGI constructors that acted like QueryInterface to handle creating objects that already exist in the object table.
 	
 D3DCompiler
 	* Fixed memory issue in Include interface.
